--- a/app/src/main/res/layout/activity_page2_creat_room.xml
+++ b/app/src/main/res/layout/activity_page2_creat_room.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/creat_room"
     tools:context=".Page2_CreatRoom">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,66 +15,69 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.447">
+        app:layout_constraintVertical_bias="0.703">
 
         <EditText
-            android:id="@+id/edt_page2"
+            android:id="@+id/edt_page2_CreatRoom"
             android:layout_width="191dp"
-            android:layout_height="44dp"
-            android:layout_marginTop="28dp"
+            android:layout_height="52dp"
+            android:layout_marginStart="270dp"
+            android:layout_marginTop="72dp"
+            android:layout_marginEnd="270dp"
             android:ems="10"
             android:hint="ชื่อห้อง"
+            android:textAlignment="center"
             android:inputType="textPersonName"
             android:textColorHint="#DF1010"
-            android:textSize="12sp"
+            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.036"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btnBack_page2_CreatRoom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="260dp"
+            android:text="ย้อนกลับ"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edt_page2_CreatRoom"
+            app:layout_constraintVertical_bias="0.695" />
+
+        <Button
+            android:id="@+id/btnCreat_page2_CreatRoom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="สร้างห้อง"
+            app:layout_constraintBottom_toBottomOf="@+id/btnBack_page2_CreatRoom"
+            app:layout_constraintStart_toEndOf="@+id/btnBack_page2_CreatRoom"
+            app:layout_constraintTop_toBottomOf="@+id/spn_selectPlayer"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/textView1Show"
             android:layout_width="74dp"
             android:layout_height="20dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginStart="260dp"
+            android:layout_marginBottom="28dp"
             android:hint="จำนวนคน :"
-            app:layout_constraintBottom_toTopOf="@+id/btnBack_page2"
+            app:layout_constraintBottom_toTopOf="@+id/btnBack_page2_CreatRoom"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Spinner
             android:id="@+id/spn_selectPlayer"
-            android:layout_width="94dp"
-            android:layout_height="47dp"
+            android:layout_width="150dp"
+            android:layout_height="41dp"
             android:layout_marginEnd="136dp"
             android:scrollbarSize="2dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnBack_page2"
+            app:layout_constraintBottom_toTopOf="@+id/btnBack_page2_CreatRoom"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.043"
             app:layout_constraintStart_toEndOf="@+id/textView1Show"
-            app:layout_constraintTop_toBottomOf="@+id/edt_page2" />
+            app:layout_constraintTop_toBottomOf="@+id/edt_page2_CreatRoom"
+            app:layout_constraintVertical_bias="0.564" />
 
-        <Button
-            android:id="@+id/btnBack_page2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="ย้อนกลับ"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edt_page2" />
-
-        <Button
-            android:id="@+id/btnCreat_page2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="188dp"
-            android:text="สร้างห้อง"
-            app:layout_constraintBottom_toBottomOf="@+id/btnBack_page2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/btnBack_page2"
-            app:layout_constraintTop_toBottomOf="@+id/spn_selectPlayer"
-            app:layout_constraintVertical_bias="1.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
