--- a/app/src/main/res/layout/activity_page1_login.xml
+++ b/app/src/main/res/layout/activity_page1_login.xml
@@ -22,8 +22,11 @@
             android:layout_width="153dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="88dp"
-            android:hint="Page1"
+            android:background="#5B0171FA"
+            android:hint="ใส่ชื่อผู้เล่น"
             android:textAlignment="center"
+            android:textColor="#FFFCFC"
+            android:textColorHint="#F6F4F4"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="58dp"
+            android:background="#F40757"
             android:text="ok"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
