--- a/app/src/main/res/layout/activity_page2_creat_room.xml
+++ b/app/src/main/res/layout/activity_page2_creat_room.xml
@@ -24,11 +24,13 @@
             android:layout_marginStart="270dp"
             android:layout_marginTop="72dp"
             android:layout_marginEnd="270dp"
+            android:background="#5B0171FA"
             android:ems="10"
             android:hint="ชื่อห้อง"
-            android:textAlignment="center"
             android:inputType="textPersonName"
-            android:textColorHint="#DF1010"
+            android:textAlignment="center"
+            android:textColor="#F8F6F6"
+            android:textColorHint="#FFFEFE"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="260dp"
+            android:background="#F40757"
             android:text="ย้อนกลับ"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:background="#F40757"
             android:text="สร้างห้อง"
             app:layout_constraintBottom_toBottomOf="@+id/btnBack_page2_CreatRoom"
             app:layout_constraintStart_toEndOf="@+id/btnBack_page2_CreatRoom"
@@ -62,7 +66,10 @@
             android:layout_height="20dp"
             android:layout_marginStart="260dp"
             android:layout_marginBottom="28dp"
+            android:background="#5B0171FA"
             android:hint="จำนวนคน :"
+            android:textColor="#FBFBFB"
+            android:textColorHint="#FDFCFC"
             app:layout_constraintBottom_toTopOf="@+id/btnBack_page2_CreatRoom"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -71,6 +78,7 @@
             android:layout_width="150dp"
             android:layout_height="41dp"
             android:layout_marginEnd="136dp"
+            android:background="#5B0171FA"
             android:scrollbarSize="2dp"
             app:layout_constraintBottom_toTopOf="@+id/btnBack_page2_CreatRoom"
             app:layout_constraintEnd_toEndOf="parent"
