--- a/app/src/main/res/layout/activity_page2_select_room.xml
+++ b/app/src/main/res/layout/activity_page2_select_room.xml
@@ -24,8 +24,11 @@
             android:layout_marginStart="258dp"
             android:layout_marginTop="80dp"
             android:layout_marginEnd="243dp"
+            android:background="#5B0171FA"
             android:hint="ชื่อห้อง"
             android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFCFC"
             android:textSize="19dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="52dp"
             android:layout_marginTop="64dp"
+            android:background="#F40757"
             android:text="ตกลง"
             app:layout_constraintBottom_toBottomOf="@+id/btnBack_Page2_SelectRoom"
             app:layout_constraintStart_toEndOf="@+id/btnBack_Page2_SelectRoom"
@@ -50,6 +54,7 @@
             android:layout_marginStart="256dp"
             android:layout_marginTop="64dp"
             android:layout_marginBottom="60dp"
+            android:background="#F40757"
             android:text="ย้อนกลับ"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
