--- a/app/src/main/res/layout/activity_page2_creat_room.xml
+++ b/app/src/main/res/layout/activity_page2_creat_room.xml
@@ -24,13 +24,13 @@
             android:layout_marginStart="270dp"
             android:layout_marginTop="72dp"
             android:layout_marginEnd="270dp"
-            android:background="#5B0171FA"
+            android:background="#C6FFFFFF"
             android:ems="10"
             android:hint="ชื่อห้อง"
             android:inputType="textPersonName"
             android:textAlignment="center"
-            android:textColor="#F8F6F6"
-            android:textColorHint="#FFFEFE"
+            android:textColor="#070707"
+            android:textColorHint="#070707"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="260dp"
-            android:background="#F40757"
+            android:background="#C8FFEB3B"
             android:text="ย้อนกลับ"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:background="#F40757"
+            android:background="#C8FFEB3B"
             android:text="สร้างห้อง"
             app:layout_constraintBottom_toBottomOf="@+id/btnBack_page2_CreatRoom"
             app:layout_constraintStart_toEndOf="@+id/btnBack_page2_CreatRoom"
@@ -66,10 +66,10 @@
             android:layout_height="20dp"
             android:layout_marginStart="260dp"
             android:layout_marginBottom="28dp"
-            android:background="#5B0171FA"
+            android:background="#C6FFFFFF"
             android:hint="จำนวนคน :"
-            android:textColor="#FBFBFB"
-            android:textColorHint="#FDFCFC"
+            android:textColor="#070707"
+            android:textColorHint="#070707"
             app:layout_constraintBottom_toTopOf="@+id/btnBack_page2_CreatRoom"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -78,7 +78,7 @@
             android:layout_width="150dp"
             android:layout_height="41dp"
             android:layout_marginEnd="136dp"
-            android:background="#5B0171FA"
+            android:background="#C6FFFFFF"
             android:scrollbarSize="2dp"
             app:layout_constraintBottom_toTopOf="@+id/btnBack_page2_CreatRoom"
             app:layout_constraintEnd_toEndOf="parent"
