--- a/app/src/main/res/layout/activity_page2_select_room.xml
+++ b/app/src/main/res/layout/activity_page2_select_room.xml
@@ -43,6 +43,7 @@
             android:background="#F40757"
             android:text="ตกลง"
             app:layout_constraintBottom_toBottomOf="@+id/btnBack_Page2_SelectRoom"
+            app:layout_constraintEnd_toEndOf="@+id/textView_Page2_SelectRoom"
             app:layout_constraintStart_toEndOf="@+id/btnBack_Page2_SelectRoom"
             app:layout_constraintTop_toBottomOf="@+id/textView_Page2_SelectRoom"
             app:layout_constraintVertical_bias="0.0" />
@@ -51,13 +52,12 @@
             android:id="@+id/btnBack_Page2_SelectRoom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="256dp"
             android:layout_marginTop="64dp"
             android:layout_marginBottom="60dp"
             android:background="#F40757"
             android:text="ย้อนกลับ"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/textView_Page2_SelectRoom"
             app:layout_constraintTop_toBottomOf="@+id/textView_Page2_SelectRoom"
             app:layout_constraintVertical_bias="0.0" />
 
