--- a/app/src/main/res/layout/activity_page1_login.xml
+++ b/app/src/main/res/layout/activity_page1_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login"
+    android:background="@drawable/login_1"
     tools:context=".Page1_Login">
 
     <androidx.constraintlayout.widget.ConstraintLayout
