--- a/app/src/main/res/layout/activity_page2_select_room.xml
+++ b/app/src/main/res/layout/activity_page2_select_room.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/select_room"
+    android:background="@drawable/choose"
     tools:context=".Page2_SelectRoom">
 
     <androidx.constraintlayout.widget.ConstraintLayout
